--- a/_posts/2024-07-26-table.md
+++ b/_posts/2024-07-26-table.md
@@ -4,5 +4,12 @@ title:  "데스크 소개"
 categories: review
 ---
 
-<h1><center> 데스크 소개 </center></h1>
-
+## <center>데스크 소개</center>
+<center>
+안녕하세요. 제 github 블로그 두 번째 게시글의 주제는 데스크 소개입니당
+</br></br>
+아직 작업이랄 것도 시작하지 않은 배우는 단계이지만 ㅠㅠ </br>
+작업환경을 기록해놓으면</br>나중에 의미있지 않을까 싶었습니다!
+</center>
+![desk1](/images/2024-07-27/1.jpg){: width="50%" height="50%"}
+Format: ![Alt Text](url)
