--- a/_posts/2024-07-26-table.md
+++ b/_posts/2024-07-26-table.md
@@ -13,6 +13,6 @@ categories: review
 작업환경을 기록해놓으면  
 나중에 의미있지 않을까 싶었습니다!
 </center>
-<center>
-![desk1](/images/2024-07-27/1.jpg){: width="50%" height="50%"}
-</center>
+
+![desk1](/images/2024-07-27/1.jpg)
+
