--- a/_posts/2024-07-26-table.md
+++ b/_posts/2024-07-26-table.md
@@ -11,7 +11,8 @@ categories: review
 </center>
 <center>
 
-아직 작업이랄 것도 시작하지 않은 배우는 단계이지만 ㅠㅠ  
+아직 작업이랄 것도 시작하지  
+않은 배우는 단계이지만 ㅠㅠ  
 작업환경을 기록해놓으면  
 나중에 의미있지 않을까 싶었습니다!
 </center>
