--- a/_posts/2024-07-26-table.md
+++ b/_posts/2024-07-26-table.md
@@ -5,17 +5,13 @@ categories: review
 ---
 
 ## <center>데스크 소개</center>
-<center>
-안녕하세요. 제 github 블로그   
-두 번째 게시글의 주제는 데스크 소개입니당
-</center>
-<center>
+안녕하세요. 제 github 블로그     
+두 번째 게시글의 주제는 데스크 소개입니당   
    
-아직 작업이랄 것도 시작하지   
-않은 배우는 단계이지만 ㅠㅠ   
+아직 작업이랄 것도 시작하지 않은   
+배우는 단계이지만 ㅠㅠ   
 작업환경을 기록해놓으면   
-나중에 의미있지 않을까 싶었습니다!   
-</center>
+나중에 의미있지 않을까 싶었습니다!
 
 ![desk1](/images/2024-07-27/1.jpg)
 
