--- a/_posts/2024-07-26-table.md
+++ b/_posts/2024-07-26-table.md
@@ -11,7 +11,67 @@ categories: review
 아직 작업이랄 것도 시작하지 않은   
 배우는 단계이지만 ㅠㅠ   
 작업환경을 기록해놓으면   
-나중에 의미있지 않을까 싶었습니다!
+나중에 의미있지 않을까 싶었습니다!   
+.   
+.   
 
-![desk1](/images/2024-07-27/1.jpg)
+![desk1](/images/2024-07-27/1.jpg)   
+이게 제 책상 사진입니다   
+뒤에 보이는 케이블들은 무시해주세요 ㅎㅎ..   
+.   
+.   
+.   
+우선 모니터부터 소개해보겠습니다   
+저는 2개의 모니터를 쓰고 있는데요   
 
+![monitor](/images/2024-07-27/2.jpg)   
+가운데 있는 이 모니터가 제 메인 모니터입니다   
+필립스 Momentum 242m 이라는 모델이고   
+제가 큰 모니터를 선호하지 않아서   
+24인치짜리로 구매했던 기억이 나네요   
+.   
+.   
+![monitor2](/images/2024-07-27/3.jpg)   
+이건 제 서브모니터입니다   
+   
+서브모니터는 당근으로 구매해서   
+주연테크사의 모니터라는 것만 알고있네용..   
+   
+
+서브로 쓸거라 화면만 잘 나오면 그만이지라는 생각으로   
+당근에서 1만원에 저렴하게 구해온 모니터입니다   
+.   
+.   
+![monitor3](/images/2024-07-27/4.jpg)   
+그리고 모니터 밑의 거치대는   
+다이소에서 5천원 주고 산 원목 받침대입니다   
+   
+   
+원래는 이것보다 가로로 더 길어서   
+두기 힘들었습니다   
+   
+그래서 손수 자르고 붙여 사이즈를   
+줄여서 사용하고 있습니다 ㅋㅋ   
+.   
+.   
+![cleaner](/images/2024-07-27/5.jpg)   
+다음으론 모니터 클리너입니다   
+   
+이것도 다이소에서 주고 산 제품이고   
+모니터 청소 겸 안경 닦을 때   
+사용하고 있는 녀석입니다   
+.   
+.   
+![pad](/images/2024-07-27/6.jpg)   
+이건 제 장패드입니다   
+.   
+.   
+
+![monitor3](/images/2024-07-27/7.jpg)   
+사실 최근에 산나비라는 게임을   
+너무 재밌게 플레이했었는데요   
+   
+마침 제가 게임을 클리어하고나니   
+관련 굿즈 상품이 나왔더라구요   
+   
+그래서 못참고 사버린 장패드입니다   
