--- a/_posts/2024-07-26-table.md
+++ b/_posts/2024-07-26-table.md
@@ -26,6 +26,7 @@ categories: review
 
 ![monitor](/images/2024-07-27/2.jpg)   
 가운데 있는 이 모니터가 제 메인 모니터입니다   
+
 필립스 Momentum 242m 이라는 모델이고   
 제가 큰 모니터를 선호하지 않아서   
 24인치짜리로 구매했던 기억이 나네요   
@@ -64,14 +65,61 @@ categories: review
 .   
 ![pad](/images/2024-07-27/6.jpg)   
 이건 제 장패드입니다   
-.   
-.   
 
 ![monitor3](/images/2024-07-27/7.jpg)   
-사실 최근에 산나비라는 게임을   
+최근에 산나비라는 게임을   
 너무 재밌게 플레이했었는데요   
    
 마침 제가 게임을 클리어하고나니   
 관련 굿즈 상품이 나왔더라구요   
    
 그래서 못참고 사버린 장패드입니다   
+.   
+.   
+
+![monitor3](/images/2024-07-27/8.jpg)   
+이건 제가 오랫동안 애용하고 있는   
+마우스인 g102 입니당   
+   
+전에는 검정색 g102를 썼는데   
+저소음 개조를 하다가 기판을 태워서 그만;;   
+
+![monitor3](/images/2024-07-27/9.jpg)   
+그래서 하얀색 모델로 새로 구매해   
+다시 저소음 스위치 교체를 해준 녀석입니당   
+.   
+.   
+
+![monitor3](/images/2024-07-27/10.jpg)   
+음..   
+그리고 이건   
+오디오인터페이스인데   
+컴퓨터 소리를 들려주거나 마이크와 연결해 소리를   
+가져올때 사용하는 제품입니다   
+.   
+.   
+![monitor3](/images/2024-07-27/11.jpg)   
+제가 쓰고 있는 이어폰입니다   
+   
+젠하이저사의 IE200 이라는 모델인데   
+이게 제 마음에 쏙 들어서   
+꽤 오랫동안 쓰고 있습니다   
+.   
+.   
+![monitor3](/images/2024-07-27/12.jpg)   
+그리고 마지막으로 이건 마이크입니다   
+(노래방 마이크처럼 생겼죠?)   
+   
+이런저런 마이크 많이 써보다가   
+지금은 이렇게 노래방마이크처럼 생긴   
+마이크가 가장 맘에 들어 쓰고 있습니당   
+   
+디스코드나 게임만 하는
+저에겐 오버스펙인거 같긴 하지만;;
+
+어쨌든!
+
+이렇게 제 데스크 소개는   
+이정도면 다 한 것 같네요   
+이 글을 보고 계신 분들 모두   
+좋은 하루 되세용~
