깜빡하고 빼놓은 키보드 추가

--- a/_posts/2024-07-26-table.md
+++ b/_posts/2024-07-26-table.md
@@ -89,8 +89,20 @@ categories: review
 다시 저소음 스위치 교체를 해준 녀석입니당   
 .   
 .   
-
+   
 ![monitor3](/images/2024-07-26/10.jpg)   
+최근에 주로 사용하고 있는 키보드입니다   
+   
+저렴하게 제작한 커스텀 키보드인데   
+소리가 시끄러워서 게임할땐   
+거의 안 쓰게 되더라구요
+   
+그래도 소리가 마음에 들어서   
+타자를 쳐야할 때 자주 꺼내씁니당      
+.   
+.   
+
+![monitor3](/images/2024-07-26/11.jpg)   
 음..   
 그리고 이건   
 오디오인터페이스인데   
@@ -98,7 +110,7 @@ categories: review
 가져올때 사용하는 제품입니다   
 .   
 .   
-![monitor3](/images/2024-07-26/11.jpg)   
+![monitor3](/images/2024-07-26/12.jpg)   
 제가 쓰고 있는 이어폰입니다   
    
 젠하이저사의 IE200 이라는 모델인데   
@@ -106,7 +118,7 @@ categories: review
 꽤 오랫동안 쓰고 있습니다   
 .   
 .   
-![monitor3](/images/2024-07-26/12.jpg)   
+![monitor3](/images/2024-07-26/13.jpg)   
 그리고 마지막으로 이건 마이크입니다   
 (노래방 마이크처럼 생겼죠?)   
    
